--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql: true
+# Datasource
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/forum_alura?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=P@$$w0rd
+
+# JPA
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.format_sql: true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql: true
