--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,38 @@
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.show-sql: true
+# Datasource
+spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/forum_alura?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=P@$$w0rd
+
+# JPA
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
+spring.jpa.properties.hibernate.format_sql: true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql: true
+
+# JWT
+forum.jwt.secret=rm'!@N=Ke!~p8VTA2ZRK~nMDQX5Uvm!m'D&]{@Vr?K!6?XhbC:Qa#9#eMLN\\}x3?JR3.2zr~v)gYF^8\\:8>:XfB:Ww75N/emt9Yj[bQMNCWwW\\J?N,nvH.<2\\.r~w]*e~vgak)X"v8H`MH/7"2E`,^k@n<vE-wD3g9JWPy;CrY*.Kd2_D])=><D?YhBaSua5hW%{2]_FVXzb9`8FH^b[X3jzVER&:jw2<=c38=>L/zBq`}C6tT*cCSVC^c]-L}&/
+forum.jwt.expiration=86400000
+
+# Actuator
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
+info.app.name=@project.name@
+info.app.description=@project.description@
+info.app.version=@project.version@
+info.app.encoding=@project.build.sourceEncoding@
+info.app.java.version=@java.version@
+
+# Endereço do Spring Boot Admin Server
+spring.boot.admin.client.url=http://localhost:8081
+
+# Endereço do Spring Boot Admin Client
+spring.boot.admin.client.instance.service-base-url: http://127.0.0.1:8080
+
+# Login/senha do Admin Server:
+spring.boot.admin.client.username=admin
+spring.boot.admin.client.password=admin123
+
+# Login/senha do Client:
+spring.boot.admin.client.instance.metadata.user.name=root
+spring.boot.admin.client.instance.metadata.user.password=P@$$w0rd
