--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,8 +1,8 @@
 # Datasource
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/forum_alura?useTimezone=true&serverTimezone=UTC
-spring.datasource.username=root
-spring.datasource.password=P@$$w0rd
+spring.datasource.username=${FORUM_DATABASE_USERNAME}
+spring.datasource.password=${FORUM_DATABASE_PASSWORD}
 
 # JPA
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
